--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<meta charset='utf-8' />
 		<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
-		<title>Venus Beauty Limited, Hong Kong`</title>	
+		<title>Venus Beauty Limited, Hong Kong</title>	
 		
 		<link rel="shortcut icon" href="favicon.ico" />
 		<link rel="apple-touch-icon" href="images/favicon.png" />
@@ -43,13 +43,16 @@
 		<button class="full-screen" onclick="$(document).toggleFullScreen()"></button>
 
 		<!-- Site Logo -->
-		<div id="logo"><img src="images/logo.jpg" width="200" height="200" /></div>
+    <div id="logo">
+      <span>VenusB</span>
+      <!-- <img src="images/logo.jpg" width="150" height="150" /> -->
+    </div>
 
 		<!-- Main Navigation -->
 		<nav class="main-nav">
 			<ul>
 				<li><a href="#home" class="active">Home</a></li>
-				<li><a href="#about">About</a></li>
+				<!-- <li><a href="#about">About</a></li> -->
 				<li><a href="#contact">Contact</a></li>
 				<li><a href="#promotion">Promotion</a></li>
 			</ul>
@@ -68,26 +71,31 @@
 			<!-- <p><a href="#about">More info &#187;</a></p> -->
 		</section>
 
-		<!-- About Page -->
+    <!-- About Page -->
+    <!--
 		<section class="content hide" id="about">
 			<h1>About</h1>
-      <h5>Here's a little about what we're up to.</h5>
-      <p>Death is inevitable, success is not. Strive hard for the soft launch.</p>
-      </section>
+      <h5>Beauty Salon + Spa + <br/>Cosmetics and Beauty Supply</h5>
+    </section>
+      -->
 
 		<!-- Contact Page -->
 		<section class="content hide" id="contact">
 			<h1>Contact</h1>
 			<h5>Get in touch.</h5>
-			<p>Email: <a href="#">venusbeauty.guru@gmail.com</a><br />
-				Phone: 1234 5678<br /></p>
+      <p>Phone: (852) 3565 6783<br /><br />
+      Address:<br/> 
+      Unit 801, 8/F, Austin Plaza, <br/>
+      83 Austin Road, Tsim Sha Tsui,<br/> 
+      Kowloon, Hong Kong<br/>
+      </p>
 		</section>
 		
 		<!-- Promotion Page -->
 		<section class="content hide" id="promotion">
 			<h1>Promotion</h1>
       <h5>Looking for great deals.</h5>
-      <p>Get the best value in town. Call 1234 5678 now.</p>
+      <p>Get the best value in town. Call (852) 3565 6783 now.</p>
 		</section>
 		
 		<!-- Background Slides -->
@@ -102,26 +110,6 @@
 			</div>
 			<div>
 				<img src="images/backgrounds/bg-img-3.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-			<div>
-				<img src="images/backgrounds/bg-img-4.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-			<div>
-				<img src="images/backgrounds/bg-img-5.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-			<div>
-				<img src="images/backgrounds/bg-img-6.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-			<div>
-				<img src="images/backgrounds/bg-img-7.jpg" alt="" />
-				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
-			</div>
-			<div>
-				<img src="images/backgrounds/bg-img-8.jpg" alt="" />
 				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 			</div>
 		</div>
