soft launch stage

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<!--<![endif]-->
 	<head>
 		<meta charset='utf-8' />
-		<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
+    <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
+    <meta name="description" content="Hong Kong beauty salon with premium service" />
+    <meta name="keywords" content="Beauty Salon, Spa, Cosmetics and Beauty Supply" />
 		<title>Venus Beauty Limited, Hong Kong</title>	
 		
 		<link rel="shortcut icon" href="favicon.ico" />
@@ -44,16 +46,15 @@
 
 		<!-- Site Logo -->
     <div id="logo">
-      <span>VenusB</span>
-      <!-- <img src="images/logo.jpg" width="150" height="150" /> -->
+      <img src="images/logo.png" width="120" height="80" />
     </div>
 
 		<!-- Main Navigation -->
 		<nav class="main-nav">
 			<ul>
 				<li><a href="#home" class="active">Home</a></li>
-				<!-- <li><a href="#about">About</a></li> -->
 				<li><a href="#contact">Contact</a></li>
+				<li><a href="#open">Opening Hours</a></li>
 				<li><a href="#promotion">Promotion</a></li>
 			</ul>
 		</nav>
@@ -65,19 +66,20 @@
 		<!-- Home Page -->
 		<section class="content show" id="home">
 			<h1>Welcome</h1>
-      <h5>Venus Beauty is coming soon!</h5>
+      <h5>Venus Beauty is at soft launch stage!</h5>
       <p><i>"Love of beauty is Taste. The creation of beauty is Art"<br />
       ~ Ralph Waldo Emerson</i></p>
 			<!-- <p><a href="#about">More info &#187;</a></p> -->
 		</section>
 
     <!-- About Page -->
-    <!--
-		<section class="content hide" id="about">
-			<h1>About</h1>
-      <h5>Beauty Salon + Spa + <br/>Cosmetics and Beauty Supply</h5>
+		<section class="content hide" id="open">
+      <h1>Official</h1>
+      <h5>Our opening hours are</h5>
+      <p>Monday to Friday. 12:00 ~ 21:00</p>
+      <p>Saturday, Sunday and Public Holiday. 10:00 ~ 19:00</p>
+      <!-- <h5>Beauty Salon + Spa + <br/>Cosmetics and Beauty Supply</h5> -->
     </section>
-      -->
 
 		<!-- Contact Page -->
 		<section class="content hide" id="contact">
@@ -95,7 +97,7 @@
 		<section class="content hide" id="promotion">
 			<h1>Promotion</h1>
       <h5>Looking for great deals.</h5>
-      <p>Get the best value in town. Call (852) 3565 6783 now.</p>
+      <p>Get the best value in town. Call (852) 3565 6783 during opening hours.</p>
 		</section>
 		
 		<!-- Background Slides -->
