--- a/index.html
+++ b/index.html
@@ -28,19 +28,6 @@
 	</head>
 	<body>
 
-    <!-- Social Links -->
-    <!--
-		<nav class="social-nav">
-			<ul>
-				<li><a href="#"><img src="images/icon-facebook.png" /></a></li>
-				<li><a href="#"><img src="images/icon-twitter.png" /></a></li> 
-				<li><a href="#"><img src="images/icon-google.png" /></a></li>
-				<li><a href="#"><img src="images/icon-dribbble.png" /></a></li>
-				<li><a href="#"><img src="images/icon-linkedin.png" /></a></li>
-        <li><a href="#"><img src="images/icon-pinterest.png" /></a></li> 
-			</ul>
-      </nav> -->
-
 		<!-- Switch to full screen -->
 		<button class="full-screen" onclick="$(document).toggleFullScreen()"></button>
 
@@ -56,6 +43,7 @@
 				<li><a href="#contact">Contact</a></li>
 				<li><a href="#open">Opening Hours</a></li>
 				<li><a href="#promotion">Promotion</a></li>
+				<li><a href="https://www.facebook.com/venusbeautyltd" target="_blank">Community</a></li>
 			</ul>
 		</nav>
 
@@ -66,7 +54,7 @@
 		<!-- Home Page -->
 		<section class="content show" id="home">
 			<h1>Welcome</h1>
-      <h5>Venus Beauty is at soft launch stage!</h5>
+      <h5>To Venus Beauty.</h5>
       <p><i>"Love of beauty is Taste. The creation of beauty is Art"<br />
       ~ Ralph Waldo Emerson</i></p>
 			<!-- <p><a href="#about">More info &#187;</a></p> -->
@@ -75,9 +63,9 @@
     <!-- About Page -->
 		<section class="content hide" id="open">
       <h1>Official</h1>
-      <h5>Our opening hours are</h5>
-      <p>Monday to Friday. 12:00 ~ 21:00</p>
-      <p>Saturday, Sunday and Public Holiday. 10:00 ~ 19:00</p>
+      <h5>Opening Hours.</h5>
+      <p>Monday to Friday. 12:00 ~ 21:00 <br />
+      Saturday, Sunday &amp; Public Holiday. 10:00 ~ 19:00</p>
       <!-- <h5>Beauty Salon + Spa + <br/>Cosmetics and Beauty Supply</h5> -->
     </section>
 
@@ -85,7 +73,8 @@
 		<section class="content hide" id="contact">
 			<h1>Contact</h1>
 			<h5>Get in touch.</h5>
-      <p>Phone: (852) 3565 6783<br /><br />
+      <p>Phone: <br />
+      (852) 3565 6783<br /><br />
       Address:<br/> 
       Unit 801, 8/F, Austin Plaza, <br/>
       83 Austin Road, Tsim Sha Tsui,<br/> 
@@ -97,7 +86,7 @@
 		<section class="content hide" id="promotion">
 			<h1>Promotion</h1>
       <h5>Looking for great deals.</h5>
-      <p>Get the best value in town. Call (852) 3565 6783 during opening hours.</p>
+      <p>Get the best value in town. <br />Call (852) 3565 6783 during opening hours.</p>
 		</section>
 		
 		<!-- Background Slides -->
@@ -112,6 +101,10 @@
 			</div>
 			<div>
 				<img src="images/backgrounds/bg-img-3.jpg" alt="" />
+				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
+			</div>
+			<div>
+				<img src="images/backgrounds/bg-img-4.jpg" alt="" />
 				<img class="gradient" src="images/backgrounds/gradient.png" alt="" />
 			</div>
 		</div>
